--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 <body>
     <div class="container">
         <h1>Mobile Application Development</h1>
-        <button class="app-button" onclick="openApp1()">First Mobile Application</button>
+        <button class="app-button" onclick="openApp1()">1.Mobil Uygulama</button>
         <br>
         <br>
-        <button class="app-button" onclick="openApp2()">First Mobile Application</button>
+        <button class="app-button" onclick="openApp2()">Android Cihazlarda Root</button>
 
     </div>
 
@@ -62,7 +62,7 @@
         }
 
         function openApp2() {
-            window.location.href = "app_1/app_1.html";
+            window.location.href = "app_1/root.html";
         }
     </script>
 
